# Alix

./: .gitignore  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
alix/: version.py
alix/common/: config.py  error_codes.py  exceptions.py  log.py  singletons.py  six_extensions.py
docs/: requirements.txt
docs/source/: conf.py  download-plantuml.py  index.rst
docs/source/architecture/: event_bus.rst
docs/source/architecture/diagrams/: .gitignore
docs/source/architecture/diagrams/event_bus/: components.puml  fire_seq.puml  interface.puml  subscribe_seq.puml
etc/: logging.yaml
