[metadata]
name = alix
summary = Home kit
description-file =
    README.md
author = Eugene Frolov
author-email = eugene@frolov.net.ru
home-page = http://alix.synapse.net.ru/
classifier =
    Environment :: alix
    Intended Audience :: Home Kit
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[entry_points]
console_scripts =
    alix-hello-world = alix.cmd.hello_world:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
